--- a/src/public/scss/common.scss
+++ b/src/public/scss/common.scss
@@ -15,8 +15,8 @@ main {
 ヘッダー
 --------------------------------------------------*/
 .header {
+    width: 100%;
     background: #fafafa;
-    position: relative;
     display: flex;
     justify-content: center;
 }
