--- a/src/public/scss/index.scss
+++ b/src/public/scss/index.scss
@@ -1,7 +1,15 @@
+.header {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 100px;
+    overflow: auto;
     /*--------------------------------------------------
     メッセージエリア
     --------------------------------------------------*/
@@ -51,15 +59,28 @@
             th,
             td {
                 border: none; /* すべての境界線を非表示 */
-                border-bottom: 1px solid #000;
+                border-bottom: 1px solid #909090;
                 padding: 15px;
                 text-align: left;
             }
             th {
-                border-top: 1px solid #000;
+                border-top: 1px solid #909090;
             }
             td {
                 white-space: normal;
+            }
+        }
+        &-tr {
+            &-weekend {
+                background-color: #909090;
+            }
+        }
+        &-td {
+            &-date {
+                width: 175px;
+            }
+            &-time {
+                width: 180px;
             }
         }
         &-btn {
