--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -94,6 +94,6 @@
   cursor: pointer;
   text-align: center;
   text-decoration: none;
-  color: #fff;
+  color: #f2f2f2;
   font-size: 0.8rem;
 }/*# sourceMappingURL=index.css.map */
