--- a/src/public/scss/index.scss
+++ b/src/public/scss/index.scss
@@ -95,7 +95,7 @@
             cursor: pointer;
             text-align: center;
             text-decoration: none;
-            color: #fff;
+            color: #f2f2f2;
             font-size: 0.8rem;
         }
     }
