:zap: 日付編集の画面を追加（テーブルへの反映は未実装）

--- a/src/public/scss/edit.scss
+++ b/src/public/scss/edit.scss
@@ -77,6 +77,10 @@
             align-items: center;
             flex-direction: column;
             font-size: 1rem;
+            &-button {
+                padding-bottom: 1rem;
+                margin-right: auto;
+            }
             &-time {
                 display: flex;
                 justify-content: space-between;
@@ -85,7 +89,7 @@
                 width: 350px;
                 font-size: 1rem;
                 label {
-                    padding-right: 0.75rem;
+                    width: 70px;
                     font-weight: bold;
                 }
                 input {
