--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -81,6 +81,10 @@
   flex-direction: column;
   font-size: 1rem;
 }
+.content__form-inputsubarea-button {
+  padding-bottom: 1rem;
+  margin-right: auto;
+}
 .content__form-inputsubarea-time {
   display: flex;
   justify-content: space-between;
@@ -90,7 +94,7 @@
   font-size: 1rem;
 }
 .content__form-inputsubarea-time label {
-  padding-right: 0.75rem;
+  width: 70px;
   font-weight: bold;
 }
 .content__form-inputsubarea-time input {
