--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -1,10 +1,47 @@
 @charset "UTF-8";
+/*--------------------------------------------------
+input=timeのカスタマイズ（アイコンを非表示に設定）
+--------------------------------------------------*/
+input[type=time] {
+  position: relative;
+  padding-left: 20px;
+}
+
+input[type=time]:after {
+  font-family: FontAwesome;
+  content: "\f017";
+  color: #fff;
+}
+
+input[type=time].calculatetimes:after {
+  color: #f2f2f2;
+}
+
+input[type=time]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  color: transparent;
+  background: transparent;
+  z-index: 100;
+}
+
+/*--------------------------------------------------
+ヘッダー
+--------------------------------------------------*/
 .header {
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
 }
 
+/*--------------------------------------------------
+コンテンツ
+--------------------------------------------------*/
 .content {
   display: flex;
   flex-direction: column;
@@ -12,12 +49,10 @@
   padding-top: 100px;
   overflow: auto;
   height: 94vh;
-  /*--------------------------------------------------
-  メッセージエリア
-  --------------------------------------------------*/
-  /*--------------------------------------------------
-  勤務時間の調整エリア
-  --------------------------------------------------*/
+  /* メッセージエリア
+  ----------------------------------------*/
+  /* 勤務時間の調整エリア
+  ----------------------------------------*/
 }
 .content__message {
   padding-top: 1rem;
