--- a/src/public/scss/punch.scss
+++ b/src/public/scss/punch.scss
@@ -1,3 +1,34 @@
+/*--------------------------------------------------
+アラートメッセージエリア
+--------------------------------------------------*/
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.alert {
+    &__success {
+        padding: 20px 30px;
+        border-color: #badbcc;
+        background-color: #d1e7dd;
+        color: #0f5132;
+        animation: fadeOut 8s;
+        animation-fill-mode: forwards; /* アニメーション終了後も最終フレームを維持 */
+        position: absolute; /* 絶対位置指定 */
+        top: 0px; /* 他のコンテンツの上に配置 */
+        left: 0; /* 他のコンテンツの左に配置 */
+        width: 100%; /* 横幅を親要素いっぱいに */
+    }
+}
+
+/*--------------------------------------------------
+コンテンツエリア
+--------------------------------------------------*/
 .content {
     display: flex;
     flex-direction: column;
@@ -21,16 +52,23 @@
         justify-content: center;
         width: 700px;
         &-item {
-            margin: 2rem;
-            padding: 1rem;
-            width: 200px;
-            border-radius: 5px;
-            background: #214be0;
-            cursor: pointer;
-            text-align: center;
-            a {
-                text-decoration: none;
-                color: #fff;
+            button {
+                // 標準のスタイルをリセット
+                border: none;
+                box-shadow: none;
+                outline: none;
+                font-family: inherit;
+                cursor: pointer;
+                // カスタムスタイル
+                margin: 2rem;
+                padding: 1rem;
+                width: 200px;
+                border-radius: 5px;
+                background: #214be0;
+                color: #f2f2f2;
+                font-size: 1rem;
+                cursor: pointer;
+                text-align: center;
             }
         }
     }
