:lipstick: 勤務状態の値に基づいて打刻ボタンの活性・非活性できるようにした

--- a/src/public/css/punch.css
+++ b/src/public/css/punch.css
@@ -63,4 +63,9 @@
   font-size: 1rem;
   cursor: pointer;
   text-align: center;
+}
+.content__button-item button:disabled {
+  background: #909090;
+  color: #f2f2f2;
+  cursor: default;
 }/*# sourceMappingURL=punch.css.map */
