--- a/src/public/scss/punch.scss
+++ b/src/public/scss/punch.scss
@@ -69,6 +69,11 @@
                 font-size: 1rem;
                 cursor: pointer;
                 text-align: center;
+                &:disabled {
+                    background: #909090;
+                    color: #f2f2f2;
+                    cursor: default;
+                }
             }
         }
     }
