:zap: 休憩ボタン打刻時にカウントアップタイマーを実装、各ボタンクリック時にアニメーション効果を追加

--- a/src/public/css/punch.css
+++ b/src/public/css/punch.css
@@ -24,6 +24,24 @@
 }
 
 /*--------------------------------------------------
+タイマー表示エリア
+--------------------------------------------------*/
+#timerDisplay {
+  width: 800px;
+  position: absolute; /* 絶対位置で配置 */
+  top: 15%; /* SVGの中心（上から）に配置 */
+  left: 50%; /* SVGの中心（左から）に配置 */
+  transform: translate(-50%, -50%); /* センタリングのための調整 */
+  color: #19191b; /* テキストの色 */
+  padding: 1rem 4rem; /* 内側の余白 */
+  border-radius: 50px; /* 角を丸く */
+  font-size: 6rem; /* フォントサイズ */
+  text-align: center; /* テキストを中央揃え */
+  z-index: 10;
+  font-family: "Ibarra Real Nova", serif;
+}
+
+/*--------------------------------------------------
 コンテンツエリア
 --------------------------------------------------*/
 .content {
@@ -37,6 +55,9 @@
   padding-left: 4rem;
   width: 1500px;
   font-size: 20px;
+}
+.content__image {
+  position: relative;
 }
 .content__image img {
   width: 700px;
@@ -63,9 +84,26 @@
   font-size: 1rem;
   cursor: pointer;
   text-align: center;
+  transition: background-color 0.5s, color 0.5s;
 }
 .content__button-item button:disabled {
   background: #909090;
   color: #f2f2f2;
   cursor: default;
+}
+
+/*--------------------------------------------------
+アニメーション効果を適用する
+--------------------------------------------------*/
+.fade-in {
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }/*# sourceMappingURL=punch.css.map */
