:lipstick: メッセージエリアの表示位置を変更（アラートメッセージが表示された場合、ナビゲーションリンクのクリックできる範囲が狭まる問題に対処）

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -27,6 +27,7 @@
   top: 0px; /* 他のコンテンツの上に配置 */
   left: 0; /* 他のコンテンツの左に配置 */
   width: 100%; /* 横幅を親要素いっぱいに */
+  margin-top: 100px; /* メッセージエリアの表示縦位置を調整 */
 }
 
 .content {
