--- a/src/public/scss/register.scss
+++ b/src/public/scss/register.scss
@@ -7,7 +7,6 @@
         flex-direction: column;
         align-items: center;
         width: 500px;
-        height: 500px;
         border-radius: 5px;
         margin-top: 5rem;
         padding: 2rem;
@@ -55,6 +54,36 @@
                 cursor: pointer;
                 text-align: center;
             }
+        }
+    }
+    &__item {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 2rem;
+        align-items: center;
+        &-message {
+            padding-top: 7rem;
+            padding-bottom: 1rem;
+            font-size: 2rem;
+            font-weight: bold;
+            text-align: center;
+        }
+        p {
+            margin: 0;
+            padding-top: 1rem;
+            font-size: 1rem;
+            font-weight: bold;
+            color: #909090;
+            text-align: center;
+        }
+        a {
+            padding-bottom: 1rem;
+            text-decoration: none;
+            font-size: 1rem;
+            font-weight: bold;
+            color: #214be0;
+            text-align: center;
         }
     }
 }
