--- a/src/public/scss/register.scss
+++ b/src/public/scss/register.scss
@@ -10,6 +10,7 @@
         border-radius: 5px;
         margin-top: 5rem;
         padding: 2rem;
+        position: relative;
         &-title {
             font-size: 1.5rem;
             font-weight: bold;
@@ -29,6 +30,7 @@
                 border-radius: 5px;
                 padding: 0.5rem;
                 font-size: 1rem;
+                z-index: 2;
             }
             input::placeholder {
                 color: #909090;
@@ -54,6 +56,16 @@
                 cursor: pointer;
                 text-align: center;
             }
+        }
+        &-error {
+            color: #da4040;
+            font-size: 0.75rem;
+            font-weight: bold;
+            align-self: flex-start;
+            padding-top: 3.25rem;
+            padding-left: 1.25rem;
+            position: absolute;
+            z-index: 1;
         }
     }
     &__item {
