--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -81,8 +81,10 @@ input[type=time]::-webkit-calendar-picker-indicator {
   justify-content: space-between;
   align-items: center;
   padding-top: 1.5rem;
+  padding-bottom: 1rem;
   width: 400px;
   font-size: 1rem;
+  position: relative;
 }
 .content__form-inputarea-allow {
   color: #61646b;
@@ -99,6 +101,7 @@ input[type=time]::-webkit-calendar-picker-indicator {
   border-radius: 5px;
   font-size: 1.15rem;
   text-align: center;
+  z-index: 2;
 }
 .content__form-inputarea input[readonly] {
   background-color: #f2f2f2;
@@ -121,7 +124,7 @@ input[type=time]::-webkit-calendar-picker-indicator {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 1.75rem;
+  padding-bottom: 2.5rem;
   width: 350px;
   font-size: 1rem;
 }
@@ -136,6 +139,7 @@ input[type=time]::-webkit-calendar-picker-indicator {
   border-radius: 5px;
   font-size: 1.15rem;
   text-align: center;
+  z-index: 2;
 }
 .content__form-inputsubarea-time button {
   margin-left: 0.5rem;
@@ -147,6 +151,7 @@ input[type=time]::-webkit-calendar-picker-indicator {
   background-color: #da4040;
   color: #f2f2f2;
   border-radius: 5px;
+  z-index: 2;
 }
 .content__form-button {
   display: flex;
@@ -169,4 +174,15 @@ input[type=time]::-webkit-calendar-picker-indicator {
   background: #214be0;
   color: #f2f2f2;
   font-size: 1rem;
+}
+.content__form-error {
+  color: #da4040;
+  font-size: 1rem;
+  font-weight: bold;
+  align-self: flex-start;
+  padding-top: 3rem;
+  padding-left: 1.25rem;
+  position: absolute;
+  flex: 0 0 auto;
+  z-index: 1;
 }/*# sourceMappingURL=edit.css.map */
