--- a/src/public/scss/edit.scss
+++ b/src/public/scss/edit.scss
@@ -78,8 +78,10 @@ input[type="time"] {
             justify-content: space-between;
             align-items: center;
             padding-top: 1.5rem;
+            padding-bottom: 1rem;
             width: 400px;
             font-size: 1rem;
+            position: relative;
             &-allow {
                 color: #61646b;
             }
@@ -95,6 +97,7 @@ input[type="time"] {
                 border-radius: 5px;
                 font-size: 1.15rem;
                 text-align: center;
+                z-index: 2;
             }
             input[readonly] {
                 background-color: #f2f2f2;
@@ -117,7 +120,7 @@ input[type="time"] {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding-bottom: 1.75rem;
+                padding-bottom: 2.5rem;
                 width: 350px;
                 font-size: 1rem;
                 label {
@@ -131,6 +134,7 @@ input[type="time"] {
                     border-radius: 5px;
                     font-size: 1.15rem;
                     text-align: center;
+                    z-index: 2;
                 }
                 button {
                     margin-left: 0.5rem;
@@ -144,6 +148,7 @@ input[type="time"] {
                     background-color: #da4040;
                     color: #f2f2f2;
                     border-radius: 5px;
+                    z-index: 2;
                 }
             }
         }
@@ -170,6 +175,17 @@ input[type="time"] {
                 color: #f2f2f2;
                 font-size: 1rem;
             }
+        }
+        &-error {
+            color: #da4040;
+            font-size: 1rem;
+            font-weight: bold;
+            align-self: flex-start;
+            padding-top: 3rem;
+            padding-left: 1.25rem;
+            position: absolute;
+            flex: 0 0 auto;
+            z-index: 1;
         }
     }
 }
